// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReferenceForm /> should render when [errorFile!=null] 1`] = `
<div>
  <div>
    <div
      className="input-form-error"
    >
      <span
        className="input-error-message"
        style={
          Object {
            "margin": "0 0 0 0",
          }
        }
      >
        foo
      </span>
    </div>
  </div>
  <Form__NameOrganism>
    <Form__Name
      mode="clone"
    >
      <InputError
        error="baz"
        label="Name"
        name="name"
        onChange={[MockFunction]}
        value="fee"
      />
    </Form__Name>
  </Form__NameOrganism>
  <InputError
    label="Description"
    name="description"
    onChange={[MockFunction]}
    type="textarea"
    value="Foo"
  />
</div>
`;

exports[`<ReferenceForm /> should render when [errorFile=null] and [errorSelect=null] 1`] = `
<div>
  <div />
  <Form__NameOrganism>
    <Form__Name
      mode="clone"
    >
      <InputError
        error="baz"
        label="Name"
        name="name"
        onChange={[MockFunction]}
        value="fee"
      />
    </Form__Name>
  </Form__NameOrganism>
  <InputError
    label="Description"
    name="description"
    onChange={[MockFunction]}
    type="textarea"
    value="Foo"
  />
</div>
`;

exports[`<ReferenceForm /> should render when [mode=create] 1`] = `
<div>
  <div>
    <div
      className="input-form-error"
    >
      <span
        className="input-error-message"
        style={
          Object {
            "margin": "0 0 0 0",
          }
        }
      >
        foo
      </span>
    </div>
  </div>
  <Form__NameOrganism>
    <Form__Name
      mode="create"
    >
      <InputError
        error="baz"
        label="Name"
        name="name"
        onChange={[MockFunction]}
        value="fee"
      />
    </Form__Name>
    <Form__Organism>
      <InputError
        label="Organism"
        name="organism"
        onChange={[MockFunction]}
        value="Bar"
      />
    </Form__Organism>
  </Form__NameOrganism>
  <InputError
    label="Description"
    name="description"
    onChange={[MockFunction]}
    type="textarea"
    value="Foo"
  />
</div>
`;
